First working version! Yay!

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 Star-rules
 ==========
 Apply CSS rules to all elements on the page
+
+This chrome extension was inspired by [this blog post of Chris Coyier](http://css-tricks.com/things-it-might-be-funuseful-to-try-the-universal-selector-on/).
+
+This is my first published (kind of serious) chrome extension. Please excuse the rough edges.
+
+The orange icons are from [GettyIcons](http://www.gettyicons.com/free-icon/136/stars-icon-set/free-orange-star-icon-png/)
